[DEPLOY] 도커파일 수정